# energyml-python-generator

./: .gitignore  .xsdata.xml  README.md  pyproject.toml
.github/actions/compute-env-variables/: action.yml
.github/actions/prepare-poetry/: action.yml
.github/actions/xsdata-generation/: action.yml  test.sh  xsdata-generation.yml
.github/workflows/: all_modules_pypi_test.yml  all_modules_release.yml  common_pypi_test.yml  common_release.yml  opc_pypi_test.yml  opc_release.yml  prodml_pypi_release.yml  prodml_pypi_test.yml  prodmlv2.2_pypi_test.yml  prodmlv2.2_release.yml  resqml_pypi_release.yml  resqml_pypi_test.yml  resqmlv2.0.1_pypi_test.yml  resqmlv2.0.1_release.yml  resqmlv2.2_pypi_test.yml  resqmlv2.2_release.yml  resqmlv2.2dev3_pypi_test.yml  resqmlv2.2dev3_release.yml  witsml_pypi_release.yml  witsml_pypi_test.yml  witsmlv2.0_pypi_test.yml  witsmlv2.0_release.yml  witsmlv2.1_pypi_test.yml  witsmlv2.1_release.yml
energyml-python-generator/: main.py
src/: README.md  pyproject.toml
